force-app/main/default/objects/TankLegalizationCost__c/TankLegalizationCost__c.object-meta.xml
<CustomObject>
    <description>Costes asociados al depósito según la provincia donde se realice.</description>
    <label>Coste de Legalización de Depósito</label>
    <nameField>
        <displayFormat>TLC {000000}</displayFormat>
        <label>Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Costes de Legalización de Depósito</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>