force-app/main/default/objects/TankLegalizationCost__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Coste</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>