force-app/main/default/objects/TankLegalizationCost__c/fields/Tank__c.field-meta.xml
<CustomField>
    <fullName>Tank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maestro de Depósito</label>
    <referenceTo>TankMasterData__c</referenceTo>
    <relationshipName>TankLegalizationCosts</relationshipName>
    <type>Lookup</type>
</CustomField>