force-app/main/default/objects/TankLegalizationCost__c/fields/TankNameFormula__c.field-meta.xml
<CustomField>
    <fullName>TankNameFormula__c</fullName>
    <formula>Tank__r.Name__c</formula>
    <label>Tank Name Formula</label>
    <type>Text</type>
</CustomField>